Day 2 shifted values 1 by 1 and found final58 difference to make data stationary

--- a/arimamodel/Untitled.ipynb
+++ b/arimamodel/Untitled.ipynb
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1087,9 +1087,7 @@
      ]
     }
    ],
-   "source": [
-    "adfuller_test(df2[100:]['Confirmed First Difference'].dropna())"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1110,6 +1108,163 @@
    ],
    "source": [
     "adfuller_test(df2[100:]['Confirmed'].dropna())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34\n",
+      "0.022943475504254275\n",
+      "43\n",
+      "0.027947571632259388\n",
+      "58\n",
+      "0.0006834592105736506\n",
+      "60\n",
+      "0.00042638632111436655\n",
+      "61\n",
+      "0.0008694139349135771\n",
+      "62\n",
+      "0.000932491739138963\n",
+      "65\n",
+      "0.002390810851420462\n",
+      "66\n",
+      "0.0023185431592515965\n",
+      "67\n",
+      "0.01658647389685244\n",
+      "68\n",
+      "0.004345216618428422\n",
+      "69\n",
+      "0.016394897253908653\n",
+      "70\n",
+      "0.006242369893402709\n",
+      "71\n",
+      "0.005381258827713542\n",
+      "73\n",
+      "0.028230801697796768\n",
+      "74\n",
+      "0.0012458336525201007\n",
+      "75\n",
+      "0.00047398582003253467\n",
+      "76\n",
+      "7.665403439536926e-05\n",
+      "77\n",
+      "0.0004551092541697685\n",
+      "78\n",
+      "0.00028375430520885254\n",
+      "79\n",
+      "3.168299941861815e-05\n",
+      "80\n",
+      "9.034178934576125e-07\n",
+      "81\n",
+      "1.2092381421716263e-06\n",
+      "82\n",
+      "0.012096813512732011\n",
+      "83\n",
+      "2.9444927076850568e-09\n",
+      "86\n",
+      "2.966317453321225e-13\n",
+      "87\n",
+      "3.1808163216487713e-16\n",
+      "88\n",
+      "5.718000488492195e-16\n",
+      "91\n",
+      "2.479904485802841e-17\n",
+      "92\n",
+      "3.1714495233620575e-20\n",
+      "95\n",
+      "1.1057664107492863e-19\n",
+      "96\n",
+      "3.4511652815349394e-18\n",
+      "98\n",
+      "3.1862521879009696e-18\n",
+      "101\n",
+      "5.895886405030043e-14\n",
+      "102\n",
+      "5.231482531730742e-13\n",
+      "107\n",
+      "0.0017469070074259193\n",
+      "110\n",
+      "1.2003186101868936e-05\n",
+      "114\n",
+      "4.045443529070427e-05\n",
+      "115\n",
+      "0.00020432513325153057\n",
+      "117\n",
+      "4.4884610815914354e-05\n",
+      "118\n",
+      "8.612686960260048e-05\n",
+      "119\n",
+      "1.3183840957905974e-06\n",
+      "120\n",
+      "7.127909295071076e-10\n",
+      "121\n",
+      "4.709096460562473e-08\n",
+      "122\n",
+      "3.687627605707712e-07\n",
+      "123\n",
+      "1.956089697633258e-06\n",
+      "124\n",
+      "1.77311590181748e-06\n",
+      "125\n",
+      "3.288113953184018e-08\n",
+      "126\n",
+      "6.678672415963569e-07\n"
+     ]
+    }
+   ],
+   "source": [
+    "#checking shifts that make data stationary\n",
+    "for i in range(1,150):\n",
+    "    df2['Confirmed Fifty Difference'] = df2['Confirmed'] - df2['Confirmed'].shift(i)\n",
+    "    test_result=adfuller(df2['Confirmed Fifty Difference'].dropna())\n",
+    "    if test_result[1]<0.05:\n",
+    "        print(i)\n",
+    "        print(test_result[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# after 58 p value seems to be consistently lesser than 0.05 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2['Confirmed Final58 Difference'] = df2['Confirmed'] - df2['Confirmed'].shift(58)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ADF Test Statistic : -4.190600854270646\n",
+      "p-value : 0.0006834592105736506\n",
+      "#Lags Used : 7\n",
+      "Number of Observations Used : 97\n",
+      "strong evidence against the null hypothesis(Ho), reject the null hypothesis. Data has no unit root and is stationary\n"
+     ]
+    }
+   ],
+   "source": [
+    "adfuller_test(df2['Confirmed Final58 Difference'].dropna())"
    ]
   },
   {
